# NexusForm-AI

./: README.md
apps/agent_app/: app.py  check_server.py  main.py  pyproject.toml  test.py  test_mcp.py  test_workflow.py
apps/agent_app/config/: config.yaml
apps/agent_app/src/agenticAI_full_workflow/agent/: agent_workflow.py
apps/agent_app/src/agenticAI_full_workflow/project_nodes/: agent_node.py  inspector_node.py  interviewer_nodes.py  review_nodes.py  scout_node.py  submitter_node.py
apps/agent_app/src/agenticAI_full_workflow/prompt_library/: prompts.py
apps/agent_app/src/agenticAI_full_workflow/schemas/: form_schema.py
apps/agent_app/src/agenticAI_full_workflow/utils/: db_manager.py  form_loader.py  model_loader.py
mcp_servers/verification_mcp/: main.py  pyproject.toml
mcp_servers/verification_mcp/src/: server.py
mcp_servers/verification_mcp/src/tools/: db_handler.py  verify_data.py
shared_core/logger/: logging.py
